@@ -2,6 +2,7 @@ package com.axonivy.market.util;
 
 import com.axonivy.market.entity.GithubRepo;
 import com.axonivy.market.entity.TesResults;
+import com.axonivy.market.entity.TestStep;
 import com.axonivy.market.enums.TestEnviroment;
 import com.axonivy.market.enums.TestStatus;
 import com.axonivy.market.enums.WorkFlowType;
@@ -9,6 +10,7 @@ import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -20,30 +22,34 @@ import static com.axonivy.market.enums.TestStatus.SKIPPED;
 public class TestResultsUtils {
 
   public static List<TesResults> processTestResults(GithubRepo githubRepo) {
-    var groupedCounts = githubRepo.getTestSteps().stream().filter(step -> !SKIPPED.equals(step.getStatus()))
-        .map(step -> {
-          var workflowType = step.getType();
-          var envType = step.getTestType();
-          var status = step.getStatus();
-          if (OTHER.equals(envType)) {
-            envType = MOCK;
-          }
-          return List.of(workflowType, envType, status);
-        }).collect(Collectors.groupingBy(key -> key, Collectors.counting()));
 
     var allCounts = githubRepo.getTestSteps().stream().filter(step -> !SKIPPED.equals(step.getStatus())).map(step -> {
       var workflowType = step.getType();
       var status = step.getStatus();
       return List.of(workflowType, TestEnviroment.ALL, status);
     }).collect(Collectors.groupingBy(key -> key, Collectors.counting()));
+    var groupedCounts = githubRepo.getTestSteps().stream().filter(step -> SKIPPED != step.getStatus()).map(
+        (TestStep step) -> {
+          var workflowType = step.getType();
+          var envType = step.getTestType();
+          var status = step.getStatus();
+          if (OTHER == envType) {
+            envType = MOCK;
+          }
+          return List.of(workflowType, envType, status);
+        }).collect(Collectors.groupingBy(key -> key, Collectors.counting()));
 
-    return Stream.concat(groupedCounts.entrySet().stream(), allCounts.entrySet().stream()).map(entry -> {
-      var keyList = entry.getKey();
-      return TesResults.builder().workflow((WorkFlowType) keyList.get(0)).environment(
-          (TestEnviroment) keyList.get(1)).status((TestStatus) keyList.get(2)).count(
-          entry.getValue().intValue()).build();
-    }).collect(Collectors.toList());
+    return Stream.concat(groupedCounts.entrySet().stream(), allCounts.entrySet().stream())
+        .map(entry -> {
+          var keyList = entry.getKey();
+          return TesResults.builder()
+              .workflow((WorkFlowType) keyList.get(0))
+              .environment((TestEnviroment) keyList.get(1))
+              .status((TestStatus) keyList.get(2))
+              .count(entry.getValue().intValue())
+              .build();
+        }).toList();
+
   }
-
 }
 
